User routing started

--- a/web_back/ui/index.html
+++ b/web_back/ui/index.html
@@ -1,3 +1,8 @@
 <!DOCTYPE html>
-<head></head>
-<body></body>
+    <head>
+        <title>Clustree API</title>
+    </head>
+    <body>
+        <p>Welcome to CLUSTREE's API!</p>
+    </body>
+</html>
